Fix controls alignment

--- a/web-app/src/app/components/player/player.component.scss
+++ b/web-app/src/app/components/player/player.component.scss
@@ -5,7 +5,6 @@
   bottom: 0;
 
   width: 100%;
-  height: 75px;
 
   display: grid;
 
@@ -21,22 +20,41 @@
 }
 
 div#controls {
+  $controls_height: 60px;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: space-between;
+  height: $controls_height;
 
-  .play-pause {
-    $button_size: 36px;
+  .main-controls {
+    display: flex;
+    align-items: center;
 
-    height: calc($button_size + 2 * 8px);
-    width: calc($button_size + 2 * 8px);
-    padding: 8px;
+    margin-left: auto;
+    margin-right: auto;
 
-    mat-icon {
-      font-size: $button_size;
-      height: $button_size;
-      width: $button_size;
+    .play-pause {
+      $button_size: 36px;
+
+      height: calc($button_size + 2 * 8px);
+      width: calc($button_size + 2 * 8px);
+      padding: 8px;
+
+      mat-icon {
+        font-size: $button_size;
+        height: $button_size;
+        width: $button_size;
+      }
     }
+  }
+
+  .settings {
+    position: absolute;
+    right: 16px;
+    height: $controls_height;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
   }
 }
 
